Se oculta el cilindraje en la vista para los vehiculos tipo carro

--- a/presentacion/src/main/res/layout/lista_vehiculos.xml
+++ b/presentacion/src/main/res/layout/lista_vehiculos.xml
@@ -46,9 +46,11 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/contenedorCilindraje"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
