--- a/presentacion/src/main/res/layout/lista_vehiculos.xml
+++ b/presentacion/src/main/res/layout/lista_vehiculos.xml
@@ -75,7 +75,7 @@
             tool:ignore="RtlHardcoded">
 
             <Button
-                android:id="@+id/btn_view_post"
+                android:id="@+id/btn_cobrar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cobrar_parqueadero" />
