--- a/presentacion/src/main/res/layout/lista_vehiculos.xml
+++ b/presentacion/src/main/res/layout/lista_vehiculos.xml
@@ -60,7 +60,7 @@
                 android:text="Cilindraje: " />
 
             <TextView
-                android:id="@+id/cilingraje"
+                android:id="@+id/cilindraje"
                 style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
