Se implementan pruebas funcionales con Espresso

--- a/presentacion/src/main/res/layout/dialogo_registrar_vehiculo.xml
+++ b/presentacion/src/main/res/layout/dialogo_registrar_vehiculo.xml
@@ -95,7 +95,6 @@
             android:hint="@string/et_cilindraje_oculto"
             android:inputType="number"
             android:maxLength="4"
-            android:text="0"
             android:textAlignment="center" />
     </LinearLayout>
 
@@ -113,7 +112,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/btn_cancelar"
+                android:id="@+id/btnCancelar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -128,7 +127,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/btn_agregar"
+                android:id="@+id/btnAgregar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
