--- a/presentacion/src/main/res/layout/lista_vehiculos.xml
+++ b/presentacion/src/main/res/layout/lista_vehiculos.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="@dimen/margen_vertical_actividad">
 
     <LinearLayout
-        android:id="@+id/contentCard"
+        android:id="@+id/contenedorVehiculo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -68,11 +68,10 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:id="@+id/contentBtnViewPost"
+            android:id="@+id/contenedorBtnCobrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            tool:ignore="RtlHardcoded">
+            android:layout_gravity="right">
 
             <Button
                 android:id="@+id/btn_cobrar"
